--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,25 +2,25 @@
 <div class="flex flex-col items-center justify-center mt-24">
 
   <!-- Header Text -->
-  <h1 class="text-6xl text-center font-bold text-blue-950">Always have a book to read next</h1>
+  <h1 class="text-6xl text-center font-bold">Find Your Next Book</h1>
 
   <hr>
   <!-- Subtext -->
-  <h2 class="text-xl mt-4 text-center text-blue-950">Delivers book recommendations using your recent X bookmarks, liked posts, and the largest accounts you follow.</h2>
+  <h2 class="text-xl mt-4 text-center">Delivers book recommendations using your recent X bookmarks, liked posts, and the largest accounts you follow.</h2>
 
   <div class="mt-8">
   <ul>
-    <li class="flex text-blue-950 items-center mb-2 pt-4">
+    <li class="flex items-center mb-2 pt-4">
       <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2 text-green-500" fill="none" viewBox="0 0 24 24" stroke="currentColor">
       <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
       </svg> Pay Once, use forever
     </li>
-    <li class="flex text-blue-950 items-center mb-2 pt-4">
+    <li class="flex items-center mb-2 pt-4">
     <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2 text-green-500" fill="none" viewBox="0 0 24 24" stroke="currentColor">
     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
     </svg><span class="text-md">Get book recommendations in one click</span>
   </li>
-  <li class="flex text-blue-950 items-center mb-2 pt-4">
+  <li class="flex items-center mb-2 pt-4">
   <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2 text-green-500" fill="none" viewBox="0 0 24 24" stroke="currentColor">
   <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
   </svg> The more you use the better the recommendations
