--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,7 +15,6 @@
  */
 
  body {
-  background-color: #E4E2DE;
-  font-weight: regular
-  font-family: "Inconsolata", monospace;
+  font-weight: regular;
+  font-family: "Jost", sans-serif;
  }
